bugs fixed, ui not showing charts

--- a/src/components/Login/LoginComponent.module.css
+++ b/src/components/Login/LoginComponent.module.css
@@ -2,7 +2,7 @@
 text-align: center;
 padding: 5rem;
 padding-top: 6rem;
-background: linear-gradient(to bottom,  rgb(208, 205, 205) 50%, rgb(8, 8, 173));
+background:  rgba(208, 205, 205, 0.7);
 
 }
 
